# saru-buf

./: .clang-format  .gitignore  CHANGELOG.md  README.md  meson.build  saru-buf.wrap
docs/: index.md
inc/: saru-buf.h  saru-bytebuf.h  saru-ucharbuf.h  ucharbuf.h
src/: buf.c  bytebuf.c  ucharbuf.c
test/: buf.c  bytebuf.c  ucharbuf.c
